// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TopBar renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "flex-start",
            "flex": 0.25,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "center",
            "flex": 0.5,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "flex-end",
            "flex": 0.25,
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`component: TopBar renders back button 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "flex-start",
            "flex": 0.25,
            "justifyContent": "center",
          },
        ]
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        exclusive={true}
        handlerTag={1}
        handlerType="NativeViewGestureHandler"
        hitSlop={
          Object {
            "bottom": 50,
            "left": 50,
            "right": 50,
            "top": 50,
          }
        }
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        touchSoundDisabled={false}
      >
        <View
          accessibilityLabel="back-button"
          accessible={true}
          collapsable={false}
          hitSlop={
            Object {
              "bottom": 50,
              "left": 50,
              "right": 50,
              "top": 50,
            }
          }
          style={
            Object {
              "opacity": 1,
              "padding": 6,
            }
          }
        >
          <Text
            allowFontScaling={true}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#25282D",
                  "fontSize": 32,
                },
                undefined,
                Object {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
      </RNGestureHandlerButton>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "center",
            "flex": 0.5,
            "justifyContent": "center",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
          },
          Object {
            "alignItems": "flex-end",
            "flex": 0.25,
            "justifyContent": "center",
          },
        ]
      }
    />
  </View>
</View>
`;
